@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <settings version="1">
   <section id="import" label="32010">
-    <category id="emby" label="32024">
+    <category id="library" label="32024">
       <group id="1">
         <setting id="emby.importviews" type="string" label="32020">
           <level>0</level>
