@@ -62,6 +62,15 @@
         </setting>
       </group>
     </category>
+    <category id="synchronization" label="32040">
+      <group id="1">
+        <setting id="emby.usekodicompanion" type="boolean" label="32041">
+          <level>0</level>
+          <default>true</default>
+          <control type="toggle" />
+        </setting>
+      </group>
+    </category>
     <category id="playback" label="32030">
       <group id="1">
         <setting id="emby.allowdirectplay" type="boolean" label="32031">
