@@ -6,6 +6,7 @@
 - redact HTTP request bodies that might contain a password
 - download the server's icon to avoid unsupported HTTP HEAD requests
 - support displaying server messages as notifications
+- support fast synchronization after a successful initial full synchronization
 
 [B]Version 0.0.5[/B]
 - make Direct Play configurable
